# TPCgeoViewer

./: CMakeLists.txt  README.md  projection.cpp
geodata/: TPC_ModularEndcap_MM_CF_TDR_o1_v01_Extract.root  TPC_ModularEndcap_o1_v01_MMCF.root  TPC_ModularEndcap_o1_v01_MMCF_Extract.root
include/: GuiTable.h  MCMagB.h  MultiView.h  RunManager.h  geoEveViewer.h
src/: GuiTable.cpp  MCMagB.cpp  MultiView.cpp  RunManager.cpp  geoEveViewer.cpp
